# SimContract-System-Architecture-Research

./: .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  TRADEMARK_POLICY.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: EXPECTED.md  SHA256SUMS
benchmark/energy_baseline_v1_seed73/: config.snapshot.json  decisions.jsonl  domain_manifest.json  manifest.json  metrics.csv  register.json  report.html  rounds.json
docs/: adapter-checklist.md  adoption-pathways.md  architecture.md  claim_boundary.md  dependency-rules.md  evidence_schema.md  experiment_protocol.md  packaging_and_plugins.md  positioning.md  spec.md  versioning-and-compatibility.md  who-should-use-this.md
docs/adr/: 0001-composition-root.md  0002-shared-exogenous-inputs.md  0003-final-phase1-structure.md  0004-evidence-as-interface.md  0005-domain-registry.md  0006-headless-first.md  0007-per-role-domain-policy-layout.md
docs/domains/: energy_market.md  epidemic_policy.md  reference_stub.md
docs/protocols/: p2_ablation_no_branch_separation.md  p2_ablation_no_branch_separation.sha256  p2_ablation_no_resolution_report.md  p2_ablation_no_resolution_report.sha256  p2a_phase_overhead.md  p2a_phase_overhead.sha256  p2a_sumo_level1_transfer.md  p2a_sumo_level1_transfer.sha256  p2b_e0_micro_counterexample.md  p2b_e0_micro_counterexample.sha256  p2b_e2_cloned_continuation.md  p2b_e2_cloned_continuation.sha256  p2b_e3_structural_boundary.md  p2b_e3_structural_boundary.sha256  p2b_e4_conclusion_impact.md  p2b_e4_conclusion_impact.sha256  p2b_e5_checker_code.sha256  p2b_e5_integrity_checker.md  p2b_e5_integrity_checker.sha256  (+2 more)
experiments/: README.md  e1_boundary_audit.py  e2_reproducibility.py  e3_contract_swap.py  e3_cross_domain.py  e3_integration_effort.py  e4_controller_comparison.py  e5_invariant_suite.py  e6_analysis_extensibility.py  e7_governed_ai_slice.py  paper1_evidence_pack.py  strong_matrix.py
paper1_evidence/: EVIDENCE_APPENDIX.md  compliance_matrix.csv  compliance_matrix.json  determinism.csv  determinism.json  dual_branch.csv  dual_branch.json  failure_containment.csv  failure_containment.json  governed_ai_slice.json  replay_equivalence.csv  replay_equivalence.json  test_summary.json
reproduction/: DEFECT_v0.3.0_newline_serialization.md  README.md  independent_reproduction_protocol.md  public_summaries.md  reproduction_report_template.md  status.yaml
scripts/: reproduction_smoke.py  verify_wheel.sh
tests/: test_analysis.py  test_analyzer_extension_example.py  test_bundle_replay.py  test_dependency_rules.py  test_domains_compliance.py  test_engine_stub.py
(+1099 files in other folders)
