[project]
name = "simcontract"
version = "0.1.0"
description = "Contract-bounded, validation-aware multi-agent simulation framework"
authors = [{ name = "Ryan Lin" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
simcontract = "simcontract.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
