[project]
name = "simcontract"
version = "0.3.1"
description = "Validation-aware, simulator-authoritative framework for reproducible, model-replaceable multi-stakeholder simulation with governed AI participation"
authors = [{ name = "Ryan Lin" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
simcontract = "simcontract.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Domain adapters load their declarative surface (action schema, metric
# catalog, observation policy) and scenario families from YAML at runtime;
# these files MUST ship in the wheel or a non-editable install crashes at
# adapter load. See docs/packaging_and_plugins.md.
[tool.setuptools.package-data]
simcontract = [
    "domains/*/*.yaml",
    "domains/*/scenarios/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
